# dl-project

./: .gitignore  README.md  basic_eval_blip2.py  basic_finetune.sh  basic_finetune_blip2.py  blip2_preprocessing.py  classifier_finetune_blip2.py  preprocessing.sh  pyproject.toml  setup.sh
blip2/: basic_finetune.sh  basic_finetune_blip2.py  blip2_preprocessing.py  blip2_preprocessing_degraded.py  classifier_eval_blip2.py  classifier_eval_smolvlm.py  classifier_finetune.sh  classifier_finetune_blip2.py  classifier_finetune_blip2_degraded.py  classifier_finetune_degraded.sh  classifier_model_blip2.py  combined_preprocessing.py  distill_blip2_to_tinyvlm.py  generate_degraded_images.py  generate_degraded_images.sh  lora_eval_blip2.py  lora_finetune_blip2.py  preprocessing.sh  preprocessing_degraded.sh
llava/: classifier.py  classifier_eval_smolvlm.py  combined_preprocessing.py  distill_llava_to_tinyvlm.py  finetune.py  finetune.sh  lora_llava.ipynb  main.ipynb  preprocessing.py
qwen/: classifier.py  finetune.py  preprocessing.py  preprocessing.sh
