[project]
name = "dl-project"
version = "0.1.0"
description = "CS7643 Group Project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.6.1",
    "kaggle>=2.0.0",
    "matplotlib>=3.10.8",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.2.0",
]
